# task-tracker

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.trellis/: .gitignore
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/05-28-focus-mode/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/aimer/: index.md  journal-1.md
docs/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  TESTING.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  reminder.rs
src-tauri/src/commands/: mod.rs  reminder.rs  settings.rs  task.rs
src/__bench__/: store-operations.bench.ts
src/__mocks__/: tauri-api.ts
src/repositories/: reminder.ts  task.ts  types.ts
src/repositories/__tests__/: reminder.test.ts  task.test.ts
src/stores/: reminder.ts  settings.ts  task.ts
src/stores/__tests__/: reminder.test.ts  settings.test.ts  task.test.ts
src/styles/: main.css
src/views/: ReminderList.vue  TaskList.vue
src/views/task-list/: PriorityMenu.vue  QuickTaskEntry.vue  SubtaskList.vue  TaskFooterStats.vue  TaskItem.vue  TaskProgress.vue  index.vue
